--- a/powerapps-docs/developer/model-driven-apps/TOC.yml
+++ b/powerapps-docs/developer/model-driven-apps/TOC.yml
@@ -1,4 +1,3 @@
-# This TOC is a work in progress. The specific location of items is not locked down
 - name: モデル駆動型アプリ
   href: ../../maker/model-driven-apps/model-driven-app-overview.md
 - name: 開発者向け概要
@@ -27,6 +26,8 @@
       href: use-editable-grids.md
     - name: 組織のテーマのクエリと編集
       href: query-and-edit-an-organization-theme.md
+    - name: PowerApps コンポーネント フレームワークを使用してカスタム コンポーネントを構築する
+      href: /powerapps/developer/component-framework/overview
 - name: コードを使用してデータの視覚化を適用する
   href: customize-visualizations-dashboards.md
   items:
@@ -756,9 +757,9 @@
             - name: isAvailableOffline
               href: clientapi/reference/xrm-webapi/isAvailableOffline.md
             - name: execute
-              href: clientapi/reference/xrm-webapi/execute.md
+              href: clientapi/reference/xrm-webapi/online/execute.md
             - name: executeMultiple
-              href: clientapi/reference/xrm-webapi/executeMultiple.md
+              href: clientapi/reference/xrm-webapi/online/executeMultiple.md
     - name: ベスト プラクティス
       href: best-practices/business-logic/index.md
 - name: コマンドとリボンをカスタマイズする
