--- a/powerapps-docs/developer/common-data-service/TOC.yml
+++ b/powerapps-docs/developer/common-data-service/TOC.yml
@@ -26,6 +26,8 @@
           href: use-fetchxml-fiscal-date-older-datetime-query-operators.md
         - name: 左外部結合を FetchXML で使用して "存在しない" 記録をクエリする
           href: use-fetchxml-left-outer-join-query-records-not-in.md
+        - name: FetchXML による大量の結果セットのページング
+          href: org-service/page-large-result-sets-with-fetchxml.md
     - name: 保存されたクエリ
       href: saved-queries.md
     - name: クエリ階層型データ
